EQ-664: Moved the .slider-wrap elem top down by 1%. TTS Head, Sitecues logo, and Zoom-level A's are now flush. Attached screenshot to bug showing their flushness.

--- a/source/css/toolbar.css
+++ b/source/css/toolbar.css
@@ -46,7 +46,7 @@
   display: inline;
   width: 160px;
   height:92%;
-  top:8%;
+  top:9%;
 }
 
 .sitecues-toolbar .ramp {
